finally fixed the link color to make it readable

--- a/css/lesson3.css
+++ b/css/lesson3.css
@@ -21,12 +21,10 @@ footer {
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    bottom: 0;   
+    bottom: 0;  
+ 
 }
-footer a {
-    text-decoration: none;
-    color: #fff;
-}
+
 nav {
     width: 100%;
     max-width: 100%;
